--- a/src/components/home/styles.css
+++ b/src/components/home/styles.css
@@ -19,11 +19,44 @@
 }
 
 .title{
-
+    display: flex;
+    justify-content: center;
 }
 
 .card {
     width: 100%;
     display: flex;
     flex-direction: column;
+}
+
+.list-container {
+    width: 220px;
+    margin: 20px;
+}
+
+.list-card-body {
+    width: 100%;
+    text-align: center;
+    font-weight: 400;
+}
+
+.list-card-item {
+    display: flex;
+    align-items: center;
+    font-size: 13.5px;
+}
+
+.list-card-item svg {
+    margin-right: 10px;
+}
+
+.card-footer {
+    height: 40px;
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    font-size: 12px;
+    font-weight: bolder;
+    color: #757575; 
 }
